# rt-events

./: BENCHING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: dispatch.rs  subscribe.rs  throughput.rs
docs/: async-patterns.md
docs/internal/: formalism.md  trampoline.md
src/: eventbus.rs  lib.rs  many.rs  single.rs
