[package]
name = "rt-events"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
description = "Microsecond pub/sub. A couple of Vecs. Four functions."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orion/rt-events"
keywords = ["events", "pubsub", "observer", "bus"]
categories = ["data-structures"]

[dependencies]
# Zero.

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dispatch"
harness = false

[[bench]]
name = "subscribe"
harness = false

[[bench]]
name = "throughput"
harness = false
